<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zxdz.car.main.view.lock.BlueInteractionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#00ff00"
            android:gravity="center"
            android:text="刷卡页面"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_card_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center|right"
                android:text="@string/card_name_text"
                android:textColor="@color/black_333"
                android:textSize="@dimen/setting_item_text" />

            <TextView
                android:id="@+id/tv_car_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="@string/no_card_info_text"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_item_text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center|right"
                android:text="姓名："
                android:textColor="@color/black_333"
                android:textSize="@dimen/setting_item_text" />

            <TextView
                android:id="@+id/tv_car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="@string/no_card_info_text"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_item_text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center|right"
                android:text="@string/alarm_text"
                android:textColor="@color/black_333"
                android:textSize="@dimen/setting_item_text" />

            <TextView
                android:id="@+id/tv_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="@string/no_card_info_text"
                android:textColor="@color/accent"
                android:textSize="@dimen/setting_item_text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center|right"
                android:text="@string/dept_text"
                android:textColor="@color/black_333"
                android:textSize="@dimen/setting_item_text" />

            <TextView
                android:id="@+id/tv_dept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="@string/no_card_info_text"
                android:textColor="@color/accent"
                android:textSize="@dimen/setting_item_text" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
