<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/setting_background"
              android:orientation="vertical"
              tools:context="com.zxdz.car.main.view.setting.SettingActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/common_action_bar"></include>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/setting_admin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_high"
        android:background="#ffffff"
        android:gravity="clip_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_num"
                android:textColor="#000000"
                android:textSize="@dimen/setting_item_text"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/right_icon"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/setting_area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_high"
        android:background="#ffffff"
        android:gravity="clip_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_setting"
                android:textColor="#000000"
                android:textSize="@dimen/setting_item_text"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/right_icon"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:id="@+id/setting_swipe_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_high"
        android:background="#ffffff"
        android:gravity="clip_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipe_setting"
                android:textColor="#000000"
                android:textSize="@dimen/setting_item_text"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/right_icon"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_high"
        android:background="#ffffff"
        android:gravity="clip_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_roll"
                android:textColor="#000000"
                android:textSize="@dimen/setting_item_text"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/right_icon"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:id="@+id/setting_server_ip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_high"
        android:background="#ffffff"
        android:gravity="clip_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_server_IP"
                android:textColor="#000000"
                android:textSize="@dimen/setting_item_text"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/right_icon"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
    android:id="@+id/setting_change"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_high"
    android:background="#ffffff"
    android:gravity="clip_vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_police"
            android:textColor="#000000"
            android:textSize="@dimen/setting_item_text"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:src="@mipmap/right_icon"/>
</RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <RelativeLayout
        android:id="@+id/setting_information"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_high"
        android:background="#ffffff"
        android:gravity="clip_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设备信息"
                android:textColor="#000000"
                android:textSize="@dimen/setting_item_text"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/right_icon"/>
    </RelativeLayout>

    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"/>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/layout_gps_upload_interval"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_high"
        android:background="#ffffff"
        android:gravity="clip_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_interval"
                android:textColor="#000000"
                android:textSize="@dimen/setting_item_text"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/right_icon"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:id="@+id/layout_networt_status"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_high"
        android:background="#ffffff"
        android:gravity="clip_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="网络状态"
                android:textColor="#000000"
                android:textSize="@dimen/setting_item_text"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/right_icon"/>
    </RelativeLayout>


</LinearLayout>
