<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Base.Widget.AppCompat.SearchView.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_high"
        android:background="@color/primary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/police_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:id="@+id/layout_card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center|right"
                    android:text="姓名："
                    android:textColor="@color/black_333"
                    android:textSize="@dimen/setting_item_text" />

                <TextView
                    android:id="@+id/tv_car_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:text="@string/no_card_info_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/setting_item_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center|right"
                    android:text="@string/card_name_text"
                    android:textColor="@color/black_333"
                    android:textSize="@dimen/setting_item_text" />

                <TextView
                    android:id="@+id/tv_car_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:text="@string/no_card_info_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/setting_item_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center|right"
                    android:text="@string/card_auth_state_text"
                    android:textColor="@color/black_333"
                    android:textSize="@dimen/setting_item_text" />

                <TextView
                    android:id="@+id/tv_auth_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:text="@string/card_auth_fail_text"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/setting_item_text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_card_read_wait"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/blue_btn_bg_color"
            android:gravity="center">

            <TextView
                android:id="@+id/open_working"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:text="开始工作中,工作完成后请干警刷卡"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/layout_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        android:gravity="center"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_next_success"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/main_button_color"
            android:text="下一步"
            android:textColor="@color/white"
            android:textSize="@dimen/setting_item_text" />
    </LinearLayout>

</LinearLayout>
