<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/common_action_bar"></include>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:id="@+id/layout_card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center|right"
                    android:text="@string/card_name_text"
                    android:textColor="@color/black_333"
                    android:textSize="@dimen/setting_item_text" />

                <TextView
                    android:id="@+id/tv_card_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/setting_item_text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center|right"
                    android:text="姓名："
                    android:textColor="@color/black_333"
                    android:textSize="@dimen/setting_item_text" />

                <TextView
                    android:id="@+id/tv_car_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/setting_item_text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center|right"
                    android:text="@string/alarm_text"
                    android:textColor="@color/black_333"
                    android:textSize="@dimen/setting_item_text" />

                <TextView
                    android:id="@+id/tv_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/setting_item_text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center|right"
                    android:text="@string/dept_text"
                    android:textColor="@color/black_333"
                    android:textSize="@dimen/setting_item_text" />

                <TextView
                    android:id="@+id/tv_dept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/setting_item_text" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:visibility="gone"
            android:id="@+id/not_move"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:text="带领民警确认安装完成后请勿移动手持机"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/layout_card_read_wait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/install_waiting_icon" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        android:gravity="center"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_next_success"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/main_button_color"
            android:text="下一步"
            android:textSize="@dimen/setting_item_text"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
